fixed some layout bugs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -190,13 +190,14 @@ p {
 }
 
 header {
-  margin: 24px;
+  padding: 24px;
+  background-color: black;
   display: flex;
   align-items: center;
   justify-content: space-between;
 
   position: fixed;
-  width: calc(100% - 48px);
+  width: 100%;
   top: 0;
   z-index: 3;
 }
@@ -266,7 +267,7 @@ section {
 
 .gallery,
 .singlegallery {
-  height: 360px;
+  height: 300px;
   display: flex;
   align-items: center;
   margin-top: 24px;
